--- a/SQL/SQL_Notebook_Example_py.ipynb
+++ b/SQL/SQL_Notebook_Example_py.ipynb
@@ -58,8 +58,8 @@
       },
       "source": [
         "# 자신의 환경에 맞게 업데이트\n",
-        "user = 'gunho19945'\n",
-        "password = 'Gunho199451!'"
+        "user = '#######'\n",
+        "password = '######'"
       ],
       "execution_count": 3,
       "outputs": []
@@ -73,8 +73,8 @@
       },
       "source": [
         "sql_conn_str = 'postgresql://{user}:{password}@grepp-data.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev'.format(\n",
-        "    user='gunho19945',\n",
-        "    password='Gunho199451!'\n",
+        "    user='######',\n",
+        "    password='#######'\n",
         ")"
       ],
       "execution_count": 4,
