--- a/SQL/SQL_Notebook_Example_py.ipynb
+++ b/SQL/SQL_Notebook_Example_py.ipynb
@@ -72,7 +72,7 @@
         "colab": {}
       },
       "source": [
-        "sql_conn_str = 'postgresql://{user}:{password}@grepp-data.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev'.format(\n",
+        "sql_conn_str = '##############(\n",
         "    user='######',\n",
         "    password='#######'\n",
         ")"
@@ -108,7 +108,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Engine(postgresql://gunho19945:***@grepp-data.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev)"
+              "Engine(postgresql://#######:***@grepp-data.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev)"
             ]
           },
           "metadata": {
