--- a/SQL/SQL_Notebook_Example_py.ipynb
+++ b/SQL/SQL_Notebook_Example_py.ipynb
@@ -157,7 +157,7 @@
       },
       "source": [
         "# ID와 PW를 자신의 환경에 맞게 수정\n",
-        "%sql postgresql://gunho19945:Gunho199451!@grepp-data.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev"
+        "%sql postgresql://#######:########@###############"
       ],
       "execution_count": 7,
       "outputs": [
