--- a/SQL/SQL_Notebook_Example_py-2.ipynb
+++ b/SQL/SQL_Notebook_Example_py-2.ipynb
@@ -58,8 +58,8 @@
       },
       "source": [
         "# 자신의 환경에 맞게 업데이트\n",
-        "user = 'gunho19945'\n",
-        "password = 'Gunho199451!'"
+        "user = '######'\n",
+        "password = '########'"
       ],
       "execution_count": 28,
       "outputs": []
@@ -72,9 +72,9 @@
         "colab": {}
       },
       "source": [
-        "sql_conn_str = 'postgresql://{user}:{password}@grepp-data.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev'.format(\n",
-        "    user='gunho19945',\n",
-        "    password='Gunho199451!'\n",
+        "sql_conn_str = 'postgresql://{user}:{password}@##############'.format(\n",
+        "    user='######',\n",
+        "    password='######'\n",
         ")"
       ],
       "execution_count": 29,
@@ -162,7 +162,7 @@
       },
       "source": [
         "# ID와 PW를 자신의 환경에 맞게 수정\n",
-        "%sql postgresql://gunho19945:Gunho199451!@grepp-data.cduaw970ssvt.ap-northeast-2.redshift.amazonaws.com:5439/dev"
+        "%sql postgresql://######:#######@#############3"
       ],
       "execution_count": 7,
       "outputs": [
@@ -173,7 +173,7 @@
               "type": "string"
             },
             "text/plain": [
-              "'Connected: gunho19945@dev'"
+              "'Connected: #######@dev'"
             ]
           },
           "metadata": {
